# taler

./: .envrc.template  README.md  eleven_test.py  main.py  pyproject.toml
local_agent/: README.md  filler_words.m4a  gandalf_elevenlabs.py  local_agent.py  trump_agent.py
voice_samples/: speech_with_fast_speaking.m4a
