[project]
name = "taler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.26.1",
    "gtts>=2.5.4",
    "mlx-whisper>=0.4.3",
    "mutagen>=1.47.0",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "openai-whisper>=20250625",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]

[project.optional-dependencies]
speech-coaching = [
    "mlx-audio>=0.1.0",
    "torch>=2.0.0",
]
